сделал 8 задание
